updated the participant create request to update the labs participants list
