# controllers/participants.js
@@ -1,6 +1,9 @@
 const express = require('express');
+const union = require('lodash/union.js');
 
-const model = require('../models/participants.js');
+const utils = require('../modules/utils.js');
+const participants = require('../models/participants.js');
+const labs = require('../models/labs.js');
 const crudController = require('./crudController.js');
 
 /** Create the express router */
@@ -9,8 +12,30 @@ const router = express.Router();
 /** Exports */
 exports = module.exports = router;
 
+/** Routes **/
+router.post('/', (req, res) => {
+  const body = req.body;
+
+  if (body === undefined) return utils.handleError(res, '"body" is undefined');
+
+  const labId = body.labId;
+
+  if (labId === undefined)
+    return utils.handleError(res, '"labId" is undefined');
+
+  const participant = participants.create(body);
+
+  const lab = labs.get(labId);
+
+  labs.update(lab.id, {
+    participants: union(lab.participants, [participant.id])
+  });
+
+  return utils.handleSuccess(res, participant);
+});
+
 /** CRUD Routes */
-crudController(router, model, {
+crudController(router, participants, {
   type: 'participants',
   type: 10,
   maxLimit: 100,
